add comment for cf push

--- a/ota/README
+++ b/ota/README
@@ -1,3 +1,3 @@
 
-
+cf push owen_otahub_test_u32 --docker-image cfleu198/ubuntu32 -c "python /afs-sdk/ota/FileServer.py" -k 2g -m 2g
 curl -X POST -F file=@model.pkl -F file_path=model http://${HOST}/upload
